[workspace]
members = ["examples/*"]

[package]
name = "protoviz"
version = "0.3.1"
edition = "2021"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
license = "GPL-2.0-only"
description = "A binary protocol visualizer (Generates svg figures for documentation)"
repository = "https://github.com/danielstuart14/protoviz"
keywords = ["protocol", "documentation", "svg", "binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_color = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
thiserror = "1.0.61"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
