[workspace]
members = ["examples/*"]

[package]
name = "protoviz"
version = "0.5.3"
edition = "2021"
authors = ["Daniel Stuart <daniel.stuart14@gmail.com>"]
license = "MIT"
description = "A fast and intuitive way of creating figures for protocol documentation"
repository = "https://github.com/danielstuart14/protoviz"
homepage = "https://protoviz.stu.art.br"
keywords = ["protocol", "documentation", "svg", "binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex_color = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
thiserror = "1.0.64"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.7"
